--- a/layout/app/topic/data/forests/scrolly-telling/forests-scrolly-telling.module.scss
+++ b/layout/app/topic/data/forests/scrolly-telling/forests-scrolly-telling.module.scss
@@ -68,7 +68,7 @@
                     justify-content: flex-start;
                     align-items: baseline;
                     font-family: 'Barlow Condensed';
-                    margin: 5 * $space;
+                    padding: 5 * $space;
     
                     .year-value {
                         display: flex;
